# KeyContainerEx

./: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
android/app/: build.gradle
keycontainerex-backend/: .gitignore  Cargo.toml  README.md  go.mod  go.sum
keycontainerex-backend/cmd/: cmd.go  cmd_init.go
keycontainerex-backend/core/: core_add.go  core_init.go
keycontainerex-backend/go-legacy/: README.md  go.sum  main.go
keycontainerex-backend/go-legacy/cmd/: cmd.go
keycontainerex-backend/go-legacy/common/: common.go
keycontainerex-backend/go-legacy/core/: core_remove.go
keycontainerex-backend/log/: log.go
keycontainerex-backend/secure/: secure.go  secure_main_password.go  secure_password.go
keycontainerex-backend/src/: args.rs  lib.rs  main.rs  util.rs
keycontainerex-backend/storage/: storage.go  storage_load.go  storage_save.go  storage_search.go
keycontainerex-backend/util/: util.go
lib/: bridge_generated.dart  constants.dart  ffi.dart  main.dart  router.dart  theme.dart
lib/model/: storage_group.dart
lib/provider/: app_state_provider.dart
lib/screens/: home.dart  settings.dart  tools.dart  welcome.dart
lib/widgets/: app_navigation_widget.dart  app_scaffold.dart
linux/: CMakeLists.txt  my_application.cc  rust.cmake
native/: .gitignore  Cargo.toml
native/lib/: Cargo.toml
native/lib/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  lib.rs  util.rs
native/lib/src/storage/: kdbx.rs  mod.rs
rust/: Cargo.toml
test/: widget_test.dart
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+22 files in other folders)
