[package]
name = "keycontainerex-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
dirs = "5.0.1"
keepass = { version = "0.6.1", features = ["save_kdbx4"] }
lazy_static = "1.4.0"
rpassword = "7.2.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.4"
