[package]
name = "keycontainerex_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
dirs = "5.0.1"
flutter_rust_bridge = "1.77.1"
keepass = { version = "0.6.1", features = ["save_kdbx4"] }
lazy_static = "1.4.0"
rpassword = "7.2.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.4"
